Minor Fix - Fix CSS spacing

--- a/static/static/css/customTypography.css
+++ b/static/static/css/customTypography.css
@@ -50,6 +50,11 @@ p, li {
   color: #e22d30;
 }
 
+/* Codice tipo output */
+pre {
+  padding: 0;
+}
+
 .highlight pre {
   margin: 1rem 2rem 1rem 2rem;
   padding: 0;
